Blissify: launch default music player on headset connect [2/2]
Change-Id: I544940f77923a2c7fda8b27c61a30bd622e50164
Signed-off-by: Julian Veit <claymore1298@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1110,4 +1110,8 @@
     <string name="fod_pressed_state_icon_white">Icon (White)</string>
     <string name="fod_pressed_state_solid_color">Solid color (usually Green)</string>
 
+    <!-- Launch music player when headset is connected -->
+    <string name="headset_connect_player_title">Launch music app on headset connection</string>
+    <string name="headset_connect_player_summary">Launch the default music app when headset is connected</string>
+
 </resources>
