--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -367,5 +367,9 @@
     <string name="roaming_indicator_icon_title">Show roaming indicator</string>
     <string name="roaming_indicator_icon_summary">Display roaming indicator in signal icon when in roaming mode</string>
 
+    <!-- 4G icon -->
+    <string name="show_fourg_icon_title">4G icon</string>
+    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
+
 </resources>
 
