--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -36,4 +36,11 @@
             android:summary="@string/roaming_indicator_icon_summary"
             android:defaultValue="true"/>
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="show_fourg_icon"
+            android:icon="@drawable/ic_fourg_icon"
+            android:title="@string/show_fourg_icon_title"
+            android:summary="@string/show_fourg_icon_summary"
+            android:defaultValue="false"/>
+
 </PreferenceScreen>
