--- a/res/xml/gesture_main.xml
+++ b/res/xml/gesture_main.xml
@@ -14,4 +14,10 @@
         android:icon="@drawable/ic_settings_leds"
         android:fragment="com.blissroms.blissify.fragments.gestures.CarbonGesturesSettings" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_anywhere"
+        android:title="@string/double_tap_sleep_lockscreen"
+        android:icon="@drawable/ic_settings_leds"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
