--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -28,6 +28,12 @@
         android:summary="@string/wakelock_blocker_summary"
         android:fragment="com.blissroms.blissify.fragments.misc.WakeLockBlocker"/>
 
+    <Preference
+        android:key="alarm_blocker"
+        android:title="@string/alarm_blocker_title"
+        android:summary="@string/alarm_blocker_summary"
+        android:fragment="com.blissroms.blissify.fragments.misc.AlarmBlocker"/>
+
     </PreferenceCategory>
 
     <SwitchPreference
