--- a/res/xml/gesture_main.xml
+++ b/res/xml/gesture_main.xml
@@ -20,4 +20,10 @@
         android:icon="@drawable/ic_settings_leds"
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="double_tap_sleep_gesture"
+        android:title="@string/double_tap_sleep_gesture_title"
+        android:icon="@drawable/ic_settings_leds"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
