Enable Lockscreen shortcuts
Change-Id: Ie9de8a90cc1494acf8d6567a31ff4cb7afb96e46

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -495,5 +495,9 @@
     <string name="lockscreen_solid_fudge_factor_title">Sanity level</string>
     <string name="lockscreen_solid_units_opacity_title">Solid lines opacity</string>
 
+    <!-- Lockscreen icons -->
+    <string name="lockscreen_shortcuts_title">Shortcuts</string>
+    <string name="lockscreen_shortcuts_summary">Configure shortcuts on bottom of the screen</string
+
 </resources>
 
