Enable Navigation bar, Lockscreen shortcuts, StatusBar tuner
Change-Id: Ie9de8a90cc1494acf8d6567a31ff4cb7afb96e46
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -23,6 +23,13 @@
         android:key="bliss_header"
         android:layout="@layout/lockscreen_header" />
 
+    <Preference
+        android:title="@string/lockscreen_tuner_title" >
+        <intent android:action="android.intent.action.MAIN"
+        android:targetPackage="com.android.systemui"
+        android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
+    </Preference>
+
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
         android:title="@string/lockscreen_battery_info_title"
