--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -436,5 +436,8 @@
     <string name="status_bar_padding">Statusbar extra padding</string>
     <string name="corner_fwvals">Use default values</string>
 
+    <!-- Lockscreen icons -->
+    <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>
+
 </resources>
 
