Enable Lockscreen shortcuts
Change-Id: Ie9de8a90cc1494acf8d6567a31ff4cb7afb96e46

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -14,6 +14,7 @@
 -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform"
     android:key="lockscreen_settings"
     android:title="@string/blissify_lockscreen_title">
@@ -22,6 +23,13 @@
     <Preference 
         android:key="bliss_header"
         android:layout="@layout/lockscreen_header" />
+
+    <Preference
+        android:title="@string/lockscreen_tuner_title" >
+        <intent android:action="android.intent.action.MAIN"
+        android:targetPackage="com.android.systemui"
+        android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
+    </Preference>
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_battery_info"
