Enable Lockscreen shortcuts
Change-Id: Ie9de8a90cc1494acf8d6567a31ff4cb7afb96e46

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -519,5 +519,9 @@
     <string name="dialog_delete_title">Delete</string>
     <string name="dialog_delete_message">Remove selected item?</string>
 
+    <!-- Lockscreen icons -->
+    <string name="lockscreen_shortcuts_title">Shortcuts</string>
+    <string name="lockscreen_shortcuts_summary">Configure shortcuts on bottom of the screen</string>
+
 </resources>
 
