Enable Lockscreen shortcuts
Change-Id: Ie9de8a90cc1494acf8d6567a31ff4cb7afb96e46

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -465,5 +465,8 @@
     <string name="enable_fc_notifications_title">Force close notifications</string>
     <string name="enable_fc_notifications_summary">Show a dialog when an application crashes</string>
 
+    <!-- Lockscreen icons -->
+    <string name="lockscreen_tuner_title">Lockscreen shortcuts</string>
+
 </resources>
 
