Less boring heads up option [2/2]
Change-Id: I963a4c8115fb734df625277caa82088392ae4f99
AICP: Also includes alarm clock update

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -701,4 +701,8 @@
     <string name="heads_up_time_out_8sec">8 seconds</string>
     <string name="heads_up_time_out_10sec">10 seconds</string>
 
+    <!-- Less boring heads-up-->
+    <string name="less_boring_heads_up_title">Make heads up less annoying</string>
+    <string name="less_boring_heads_up_summary">Show heads up only for dialer, alarm clock and messaging app</string>
+
 </resources>
