--- a/res/xml/heads_up_options.xml
+++ b/res/xml/heads_up_options.xml
@@ -21,6 +21,12 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:title="@string/notification_heads_up_title">
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="less_boring_heads_up"
+        android:title="@string/less_boring_heads_up_title"
+        android:summary="@string/less_boring_heads_up_summary"
+        android:defaultValue="0" />
+
     <com.bliss.support.preferences.SystemSettingIntListPreference
         android:key="heads_up_notification_snooze"
         android:title="@string/heads_up_snooze_title"
