--- a/res/xml/buttons_hwkeys.xml
+++ b/res/xml/buttons_hwkeys.xml
@@ -87,6 +87,25 @@
         </com.android.settings.smartnav.ActionPreference>
 
     </PreferenceCategory>
+    
+    <PreferenceCategory
+        android:key="hardware_backlight"
+        android:title="@string/hardware_backlight_category" >
+        <com.blissroms.blissify.preference.CustomSeekBarPreference
+            android:key="button_brightness"
+            android:title="@string/button_brightness_title"
+            android:max="255"
+            settings:min="0"
+            settings:units=""
+            android:persistent="false" />
+        <ListPreference
+            android:dialogTitle="@string/backlight_timeout_title"
+            android:entries="@array/backlight_timeout_entries"
+            android:entryValues="@array/backlight_timeout_values"
+            android:key="backlight_timeout"
+            android:persistent="false"
+            android:title="@string/backlight_timeout_title" />
+    </PreferenceCategory>
 
     <PreferenceCategory
         android:key="menu_key"
