blissify: add CPU info overlay [2/2]
Change-Id: I0abed463e119da39def095a4e927683dacf2926b

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -315,5 +315,9 @@
     <string name="advanced_reboot_title">Advanced restart</string>
     <string name="advanced_reboot_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>
 
+    <!-- setting: show CPU info-->
+    <string name="show_cpu_info">Show CPU info</string>
+    <string name="show_cpu_info_summary">Screen overlay showing current CPU info</string>
+
 </resources>
 
