blissify: add CPU info overlay [2/2]
Change-Id: I0abed463e119da39def095a4e927683dacf2926b

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -30,4 +30,11 @@
         android:summaryOff="@string/summary_dashboard_suggestions_disabled"
         android:defaultValue="true" />
 
+    <!-- Show CPU Info overlay -->
+    <SwitchPreference
+        android:key="show_cpu_info"
+        android:title="@string/show_cpu_info"
+        android:summary="@string/show_cpu_info_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
