--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -241,7 +241,7 @@
     <!-- Launch music player when headset is connected -->
     <PreferenceCategory
         android:key="launch_music"
-        android:title="@string/headset_connect_player_title"
+        android:title="@string/music_options"
         android:icon="@drawable/ic_music">
 
     <com.bliss.support.preferences.SystemSettingSwitchPreference
@@ -249,6 +249,13 @@
         android:title="@string/headset_connect_player_title"
         android:summary="@string/headset_connect_player_summary"
         android:defaultValue="false" />
+
+    <com.bliss.support.preferences.GlobalSettingListPreference
+        android:key="ringtone_focus_mode"
+        android:title="@string/ringtone_focus_mode_title"
+        android:entries="@array/ringtone_focus_mode_entries"
+        android:entryValues="@array/ringtone_focus_mode_values"
+        android:defaultValue="1" />
 
     </PreferenceCategory>
 
