Color Picker: use oval preview
This brings the color picker preview inline with the LED. If we're going
to keep the color picker thing around, lets at least make it uniform

Change-Id: Icc7d9d57c6ca0ceb20dd2ebbc5678f08988f9ddb

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -19,6 +19,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <dimen name="alert_dialog_padding_material">20dp</dimen>
+    <dimen name="oval_notification_size">26dp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
