--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,17 +22,38 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:title="Import" />
+            android:id="@+id/nav_animation"
+            android:icon="@drawable/ic_nav_animation"
+            android:title="@string/animation_category" />
         <item
-            android:id="@+id/nav_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_button"
+            android:icon="@drawable/ic_nav_button"
+            android:title="@string/button_category" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_gestures"
+            android:icon="@drawable/ic_nav_gestures"
+            android:title="@string/gestures_category" />
         <item
-            android:id="@+id/nav_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_lockscreen"
+            android:icon="@drawable/ic_nav_lockscreen"
+            android:title="@string/lockscreen_category" />
+        <item
+            android:id="@+id/nav_power"
+            android:icon="@drawable/ic_nav_power"
+            android:title="@string/power_category" />
+        <item
+            android:id="@+id/nav_quick_settings"
+            android:icon="@drawable/ic_nav_quick_settings"
+            android:title="@string/qs_category" />
+        <item
+            android:id="@+id/nav_recents"
+            android:icon="@drawable/ic_nav_recents"
+            android:title="@string/recents_category" />
+        <item
+            android:id="@+id/nav_statusbar"
+            android:icon="@drawable/ic_nav_statusbar"
+            android:title="@string/statusbar_category" />
+
     </group>
 
     <item android:title="Communicate">
