--- a/app/src/main/res/layout/blissify_fixed_tablayout.xml
+++ b/app/src/main/res/layout/blissify_fixed_tablayout.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content">
 
         <android.support.design.widget.TabLayout
-            android:id="@+id/sliding_tabs"
+            android:id="@+id/fixed_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
