--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,12 +15,14 @@
      limitations under the License.
 -->
 
-<resources>
+<resources
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="design_navigation_icon_size" tools:override="true">36dp</dimen>
 
 </resources>
