--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -80,22 +80,14 @@
             android:dialogTitle="@string/status_bar_clock_position_title"
             android:entries="@array/status_bar_clock_position_entries"
             android:entryValues="@array/status_bar_clock_position_values"
-            android:defaultValue="0" />
-
-        <lineageos.preference.SecureSettingSwitchPreference
-            android:key="clock_seconds"
-            android:title="@string/status_bar_clock_show_seconds_title"
-            android:summary="@string/status_bar_clock_show_seconds_summary"
-            android:defaultValue="false" />
-
-        <lineageos.preference.LineageSystemSettingListPreference
-            android:key="status_bar_am_pm"
-            android:title="@string/status_bar_am_pm_title"
-            android:summary="%s"
-            android:dialogTitle="@string/status_bar_am_pm_title"
-            android:entries="@array/status_bar_am_pm_entries"
-            android:entryValues="@array/status_bar_am_pm_values"
             android:defaultValue="2" />
+
+        <Preference
+            android:key="clock"
+            android:title="@string/status_bar_clock_title"
+            android:summary="@string/status_bar_clock_summary"
+            android:fragment="com.blissroms.blissify.fragments.statusbar.Clock" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
