Network traffic mode for status bar [2/3]
Change-Id: I846d4ecb7e7125483734617faecce761c78d8cfc

--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -39,10 +39,9 @@
 
         <PreferenceScreen
             android:key="network_traffic_settings"
-            android:icon="@drawable/ic_traffic"
             android:title="@string/network_traffic_settings_title"
             android:summary="@string/network_traffic_settings_summary"
-            android:fragment="com.bliss.settings.fragments.statusbar.NetworkTraffic" />
+            android:fragment="com.blissroms.blissify.fragments.statusbar.NetworkTrafficSettings" />
 
         <Preference
             android:key="batterybar_settings"
