--- a/res/xml/network_traffic_settings.xml
+++ b/res/xml/network_traffic_settings.xml
@@ -18,32 +18,65 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
-    <DropDownPreference
+    <lineageos.preference.LineageSecureSettingListPreference
+        android:key="network_traffic_location"
+        android:title="@string/network_traffic_location_title"
+        android:entries="@array/network_traffic_location_entries"
+        android:entryValues="@array/network_traffic_location_values"
+        android:summary="%s"
+        android:defaultValue="0" />
+
+    <lineageos.preference.LineageSecureSettingListPreference
         android:key="network_traffic_mode"
         android:title="@string/network_traffic_mode_title"
         android:entries="@array/network_traffic_mode_entries"
         android:entryValues="@array/network_traffic_mode_values"
         android:summary="%s"
-        android:persistent="false" />
+        android:defaultValue="0" />
 
     <lineageos.preference.LineageSecureSettingSwitchPreference
         android:key="network_traffic_autohide"
         android:title="@string/network_traffic_autohide"
         android:summary="@string/network_traffic_autohide_summary"
-        android:defaultValue="false" />
+        android:defaultValue="true" />
 
-    <DropDownPreference
-        android:key="network_traffic_units"
-        android:title="@string/network_traffic_units_title"
-        android:entries="@array/network_traffic_units_entries"
-        android:entryValues="@array/network_traffic_units_values"
-        android:summary="%s"
-        android:persistent="false" />
+    <com.bliss.support.preferences.LineageSecureSettingSeekBarPreference
+        android:key="network_traffic_autohide_threshold"
+        android:title="@string/network_traffic_autohide_threshold"
+        android:defaultValue="0"
+        android:max="10000"
+        settings:min="0"
+        settings:units="@string/network_traffic_autohide_kilobits"
+        settings:interval="10"
+        android:dependency="network_traffic_autohide" />
+
+    <com.bliss.support.preferences.LineageSecureSettingSeekBarPreference
+        android:key="network_traffic_refresh_interval"
+        android:title="@string/network_traffic_refresh_interval_title"
+        android:summary="@string/network_traffic_refresh_interval_summary"
+        android:defaultValue="2"
+        android:max="10"
+        settings:min="1"
+        settings:units="@string/unit_seconds" />
 
     <lineageos.preference.LineageSecureSettingSwitchPreference
         android:key="network_traffic_show_units"
         android:title="@string/network_traffic_show_units"
         android:summary="@string/network_traffic_show_units_summary"
         android:defaultValue="true" />
+
+    <lineageos.preference.LineageSecureSettingListPreference
+        android:key="network_traffic_units"
+        android:title="@string/network_traffic_units_title"
+        android:entries="@array/network_traffic_units_entries"
+        android:entryValues="@array/network_traffic_units_values"
+        android:summary="%s"
+        android:defaultValue="1"
+        android:dependency="network_traffic_show_units" />
+
+    <lineageos.preference.LineageSecureSettingSwitchPreference
+        android:key="network_traffic_hidearrow"
+        android:title="@string/network_traffic_hidearrow"
+        android:summary="@string/network_traffic_hidearrow_summary" />
 
 </PreferenceScreen>
