--- a/app/src/main/res/xml/system_animation.xml
+++ b/app/src/main/res/xml/system_animation.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen>
 
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="example_checkbox"
+        android:summary="CheckBoxPreference summary"
+        android:title="CheckBoxPreference title"/>
 </PreferenceScreen>
