Blissify: Add Support for Preferences
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/app/src/main/res/xml/system_animation.xml
+++ b/app/src/main/res/xml/system_animation.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <CheckBoxPreference
+    <SwitchPreference
         android:defaultValue="true"
         android:key="example_checkbox"
         android:summary="CheckBoxPreference summary"
