Blissify: Add more Tab Customizations - Text color on select nd default - Increase Tab Indicator Height (1.5dp -> 3dp) - Added Scrollable Tab Layout - All Colors are Temp
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/app/src/main/res/layout/blissify_fixed_tablayout.xml
+++ b/app/src/main/res/layout/blissify_fixed_tablayout.xml
@@ -20,11 +20,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
+            android:background="@color/colorPrimaryDark"
             app:tabMode="fixed"
             app:tabGravity="fill"
-            android:background="@color/colorPrimaryDark"
+            app:tabTextColor="@color/tab_default_text"
             app:tabIndicatorColor="@android:color/white"
-            app:tabIndicatorHeight="1.5dp"
+            app:tabIndicatorHeight="3dp"
+            app:tabSelectedTextColor="@color/tab_selected_text"
             />
     </android.support.design.widget.AppBarLayout>
 
