--- a/app/src/main/res/layout/blissify_tablayout.xml
+++ b/app/src/main/res/layout/blissify_tablayout.xml
@@ -20,7 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="0dp"
-            app:tabMode="fixed"
+            app:tabMode="scrollable"
             app:tabGravity="fill"
             android:background="@color/colorPrimaryDark"
             app:tabIndicatorColor="@android:color/white"
