--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -411,5 +411,18 @@
     <string name="show_fourg_icon_title">4G icon</string>
     <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
 
+    <!-- QS Brightness Slider position -->
+    <string name="qs_brightness_slider_hide">Hide</string>
+    <string name="qs_brightness_slider_top">Top</string>
+    <string name="qs_brightness_slider_bottom">Bottom</string>
+
+    <!-- Quick settings brightness icon -->
+    <string name="brightness_icon_title">Auto brightness</string>
+    <string name="brightness_icon_summary">Show toggle for adaptive brightness near the slider</string>
+
+    <!-- Quick settings brightness slider -->
+    <string name="qs_brightness_slider_title">Brightness slider</string>
+    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
+
 </resources>
 
