--- a/res/xml/blissify_gestures.xml
+++ b/res/xml/blissify_gestures.xml
@@ -31,4 +31,10 @@
         android:summary="@string/status_bar_double_tap_to_sleep_summary"
         android:defaultValue="true" />
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="three_finger_gesture"
+        android:title="@string/three_finger_gesture"
+        android:summary="@string/three_finger_gesture_summary"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
