--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -885,4 +885,8 @@
     <string name="lockscreen_max_notif_config_title">Maximum number of notifications</string>
     <string name="lockscreen_max_notif_config_summary">Control the maximum number of expanded notifications to show on lockscreen</string>
 
+    <!-- Force expanded notifications -->
+    <string name="force_expanded_notifications_title">Force expanded notifications</string>
+    <string name="force_expanded_notifications_summary">Force apps that support expanded notifications</string>
+
 </resources>
