Blissify: Sensor block per-package switch [2/2]
Change-Id: I1ef956306a259b3ad85548b9de8741d75f8e2299

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -204,4 +204,10 @@
             android:disableDependentsState="true" />
     </PreferenceCategory>
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+           android:key="sensor_block" 
+           android:title="@string/sensor_block_title"
+           android:summary="@string/sensor_block_summary"
+           android:defaultValue="false" />
+
 </PreferenceScreen>
