--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -21,7 +21,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.blissroms.blissify.MainActivity">
+    tools:context="com.blissroms.blissify.BlissifyActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
