--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -17,6 +17,23 @@
     android:key="misc_settings"
     android:title="@string/blissify_misc_title">
 
+    <!-- Wakelock blocker -->
+
+    <Preference
+        android:key="wakelock_blocker"
+        android:title="@string/wakelock_blocker_title"
+        android:summary="@string/wakelock_blocker_summary"
+        android:fragment="com.blissroms.blissify.fragments.misc.WakeLockBlocker"/>
+
+    <!-- Alarm blocker -->
+
+    <Preference
+        android:key="alarm_blocker"
+        android:icon="@drawable/ic_alarm"
+        android:title="@string/alarm_blocker_title"
+        android:summary="@string/alarm_blocker_summary"
+        android:fragment="com.blissroms.blissify.fragments.misc.AlarmBlocker"/>
+
     <SwitchPreference
         android:key="fingerprint_success_vib"
         android:icon="@drawable/ic_fingerprint_vibration"
