Blissify: Screen Off Animation [2/2]
Change-Id: I799cb88b6aaf6b68064acf97d497a0725e83403a
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -436,5 +436,12 @@
     <string name="status_bar_padding">Statusbar extra padding</string>
     <string name="corner_fwvals">Use default values</string>
 
+    <!-- Screen off animation -->
+    <string name="screen_off_animation_fade">Simple fade</string>
+    <string name="screen_off_animation_color">Color fade</string>
+    <string name="screen_off_animation_crt">CRT</string>
+    <string name="screen_off_animation_scale">Scale</string>
+    <string name="screen_off_animation_title">Screen off animation</string>
+    
 </resources>
 
