--- a/res/xml/blissify_animation.xml
+++ b/res/xml/blissify_animation.xml
@@ -131,5 +131,13 @@
             android:entries="@array/qs_tile_animation_interpolator_entries"
             android:entryValues="@array/qs_tile_animation_interpolator_values"
             android:persistent="false" />
-
+        
+    <ListPreference
+        android:key="screen_off_animation"
+        android:title="@string/screen_off_animation_title"
+        android:entries="@array/screen_off_animation_entries"
+        android:entryValues="@array/screen_off_animation_values"
+        android:persistent="false"
+        android:defaultValue="0" />
+        
 </PreferenceScreen>
