--- a/res/xml/qs_panel.xml
+++ b/res/xml/qs_panel.xml
@@ -23,6 +23,13 @@
         android:title="@string/bright_slide" />
 
         <com.bliss.support.preferences.SecureSettingSwitchPreference
+            android:key="status_bar_brightness_control"
+            android:title="@string/status_bar_toggle_brightness"
+            android:summary="@string/status_bar_toggle_brightness_summary"
+            android:defaultValue="false" />
+
+
+        <com.bliss.support.preferences.SecureSettingSwitchPreference
             android:key="qs_show_brightness_slider"
             android:title="@string/brightness_slider_title"
             android:summary="@string/brightness_slider_summary"
