--- a/res/layout/app_bar_main.xml
+++ b/res/layout/app_bar_main.xml
@@ -21,7 +21,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.blissroms.blissify.BlissifyActivity">
+    tools:context="com.blissroms.blissify.BlissifySettings">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
