--- a/res/xml/status_bar_clock.xml
+++ b/res/xml/status_bar_clock.xml
@@ -93,4 +93,26 @@
         android:title="@string/status_bar_date_format_title"
         android:entries="@array/status_bar_date_format_entries_values"
         android:entryValues="@array/status_bar_date_format_entries_values" />
+
+    <com.bliss.support.preferences.CustomSeekBarPreference
+        android:key="status_bar_clock_size"
+        android:title="@string/status_bar_clock_font_size_title"
+        android:max="23"
+        settings:min="4"
+        android:defaultValue="14"
+        settings:units="dp"/>
+
+    <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="status_bar_clock_color"
+        android:title="@string/status_bar_clock_color_title"
+        android:defaultValue="0xffffffff" />
+
+    <ListPreference
+        android:key="status_bar_clock_font_style"
+        android:dialogTitle="@string/status_bar_clock_font_style_title"
+        android:title="@string/status_bar_clock_font_style_title"
+        android:entries="@array/font_style_entries"
+        android:entryValues="@array/font_style_values"
+        android:defaultValue="28" />
+
 </PreferenceScreen>
