--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -17,6 +17,41 @@
 
 <resources>
 
+    <!-- Battery customizations -->
+    <string-array name="status_bar_battery_style_entries" translatable="false">
+        <item>@string/battery_style_port</item>
+        <item>@string/battery_style_circle</item>
+        <item>@string/battery_style_dotted_circle</item>
+        <item>@string/battery_style_big_circle</item>
+        <item>@string/battery_style_big_dotted_circle</item>
+        <!--<item>@string/battery_style_square</item>
+        <item>@string/battery_style_dotted_square</item> -->
+        <item>@string/battery_style_text</item>
+    </string-array>
+
+    <string-array name="status_bar_battery_style_values" translatable="false">
+        <item>0</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <!--<item>6</item>
+        <item>7</item> -->
+        <item>8</item>
+    </string-array>
+
+    <!-- Battery circle percent -->
+    <string-array name="battery_percent_entries" translatable="false">
+        <item>@string/battery_percent_none</item>
+        <item>@string/battery_percent_outside</item>
+        <item>@string/battery_percent_inside</item>
+    </string-array>
+    <string-array name="battery_percent_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <!-- Toast Animation -->
     <string-array name="toast_animation_entries">
         <item>@string/toast_none_animation</item>
