Blissify: Lockscreen isualizer switch
Change-Id: Ibf22007c0f92795dc8c4bd218166aea3ca527e84

--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -3,6 +3,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_visualizer_enabled"
+        android:title="@string/lockscreen_visualizer_title"
+        android:summary="@string/lockscreen_visualizer_summary"
+        android:defaultValue="false" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
         android:key="lockscreen_weather_enabled"
         android:title="@string/lockscreen_weather_title"
         android:summary="@string/lockscreen_weather_summary"
