--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen 
+<PreferenceScreen
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
         android:key="lockscreen_visualizer_enabled"
-        android:title="@string/lockscreen_visualizer_title"
-        android:summary="@string/lockscreen_visualizer_summary"
+        android:title="@string/lockscreen_visualizer_enable"
+        android:summary="@string/lockscreen_visualizer_enable_summary"
         android:defaultValue="false" />
 
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
@@ -14,13 +14,19 @@
         android:summary="@string/lockscreen_visualizer_enable_custom_summary"
         android:dependency="lockscreen_visualizer_enabled"
         android:defaultValue="false" />
-    
+
     <net.margaritov.preference.colorpicker.ColorPickerPreference
         android:key="lock_screen_visualizer_custom_color"
         android:title="@string/lockscreen_visualizer_custom_color"
         android:dependency="lock_screen_visualizer_use_custom_color"
         android:defaultValue="0xffffffff"
         android:dialogTitle="@string/lockscreen_visualizer_custom_color" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_battery_info"
+        android:title="@string/lockscreen_battery_info_title"
+        android:summary="@string/lockscreen_battery_info_summary"
+        android:defaultValue="true" />
 
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
         android:key="lockscreen_weather_enabled"
