--- a/res/xml/statusbar_icons.xml
+++ b/res/xml/statusbar_icons.xml
@@ -6,7 +6,7 @@
     <PreferenceCategory
         android:title="@string/carrier_label_settings_title"/>
 
-         <com.blissroms.blissify.SystemSettingListPreference
+         <com.blissroms.blissify.preference.SystemSettingListPreference
             android:key="status_bar_show_carrier"
             android:title="@string/show_carrier_title"
             android:dialogTitle="@string/show_carrier_title"
@@ -23,19 +23,19 @@
          android:key="nettraffic_settings"
          android:title="@string/nettraffic_settings_title"/>
 
-         <com.blissroms.blissify.SystemSettingListPreference
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="network_traffic_state"
             android:title="@string/network_traffic_state_title"
             android:defaultValue="false" />
 
-         <com.blissroms.blissify.SystemSettingListPreference
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="network_traffic_hidearrow"
             android:title="@string/network_traffic_hidearrow"
             android:summary="@string/network_traffic_hidearrow_summary"
             android:dependency="network_traffic_state"
             android:defaultValue="false" />
 
-         <com.blissroms.blissify.SystemSettingSeekBarPreference
+         <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
             android:key="network_traffic_autohide_threshold"
             android:title="@string/network_traffic_autohide_threshold_title"
             android:max="10"
@@ -45,7 +45,7 @@
             android:defaultValue="0"
             android:dependency="network_traffic_state" />
 
-         <com.blissroms.blissify.SystemSettingListPreference
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="use_old_mobiletype"
             android:title="@string/use_old_mobiletype_title"
             android:summary="@string/use_old_mobiletype_summary"
