[2/2] Blissify: config to disable power menu on secure lock screen
Change-Id: I19634f549d4c05ebcac3835e76baf055e3565099

--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -34,9 +34,10 @@
         android:summary="@string/lockscreen_weather_summary"
         android:defaultValue="false" />
 
-    <Preference
-        android:icon="@drawable/ic_info_outline_24dp"
-        android:persistent="false"
-        android:summary="@string/lockscreen_items_aod_info_title" />
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_power_menu_disabled"
+        android:title="@string/lockscreen_power_menu_disabled_title"
+        android:summary="@string/lockscreen_power_menu_disabled_summary"
+        android:defaultValue="false" />
 
 </PreferenceScreen>
